# OffsetResolver

./: .gitignore  API.md  ARCHITECTURE.md  AddressResolver.cpp  AddressResolver.h  BUILD.md  CMakeLists.txt  ConsoleUI.cpp  ConsoleUI.h  DebugLog.cpp  DebugLog.h  EXAMPLES.md  INDEX.md  MemoryReader.cpp  MemoryReader.h  ModuleRegistry.cpp  ModuleRegistry.h  OffsetStorage.cpp  OffsetStorage.h  PointerChainResolver.cpp  PointerChainResolver.h  PointerChainStorage.cpp  PointerChainStorage.h  ProcessManager.cpp  ProcessManager.h  QUICKSTART.md  README.md  README_EN.md  VISUAL_STRUCTURE.md  base_address.cpp  build.ps1  eng_base_address.cpp  main.cpp  offsets_example.cfg  organize_docs.ps1
RUS/: API.md  ARCHITECTURE.md  BUILD.md  EXAMPLES.md  INDEX.md  QUICKSTART.md  README.md  VISUAL_STRUCTURE.md
